rounded logo, include jquery

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-secondary navbar-expand-sm">
+<nav class="navbar navbar-expand-sm navbar-light bg-secondary">
   <%= link_to image_tag("p-active.svg", alt: "P-Active"), root_path, id: "logo", class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
