--- a/app/assets/images/favicon/site.webmanifest.erb
+++ b/app/assets/images/favicon/site.webmanifest.erb
@@ -13,8 +13,8 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
+    "theme_color": "#eb6864",
+    "background_color": "#eb6864",
     "start_url": "https://p-active.kylesferrazza.com/",
     "display": "standalone"
 }
