--- a/app/views/application/_favicon.html.erb
+++ b/app/views/application/_favicon.html.erb
@@ -2,10 +2,10 @@
 <link rel="icon" type="image/png" sizes="32x32" href="<%= asset_path 'favicon/favicon-32x32.png' %>">
 <link rel="icon" type="image/png" sizes="16x16" href="<%= asset_path 'favicon/favicon-16x16.png' %>">
 <link rel="manifest" href="<%= asset_path 'favicon/site.webmanifest' %>">
-<link rel="mask-icon" href="<%= asset_path 'favicon/safari-pinned-tab.svg' %>" color="#ffffff">
+<link rel="mask-icon" href="<%= asset_path 'favicon/safari-pinned-tab.svg' %>" color="#eb6864">
 <link rel="shortcut icon" href="<%= asset_path 'favicon/favicon.ico' %>">
 <meta name="apple-mobile-web-app-title" content="P-Active">
 <meta name="application-name" content="P-Active">
-<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileColor" content="#eb6864">
 <meta name="msapplication-config" content="<%= asset_path 'favicon/browserconfig.xml' %>">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#eb6864">
