favicon color was wrong

--- a/app/assets/images/favicon/browserconfig.xml.erb
+++ b/app/assets/images/favicon/browserconfig.xml.erb
@@ -3,7 +3,7 @@
     <msapplication>
         <tile>
             <square150x150logo src="<%= asset_path 'favicon/mstile-150x150.png' %>"/>
-            <TileColor>#eb6864</TileColor>
+            <TileColor>#ef3958</TileColor>
         </tile>
     </msapplication>
 </browserconfig>
